[gd_scene load_steps=11 format=3 uid="uid://bwx6ylvlckn2f"]

[ext_resource type="Script" path="res://code/dandelion_projectile.gd" id="1_1f3j8"]
[ext_resource type="Texture2D" uid="uid://b0uhdpwixnqek" path="res://assets/anna meeba/Dandelion/Dandelion Floret.png" id="2_jo7lv"]
[ext_resource type="PackedScene" uid="uid://bqqxliucucw6n" path="res://scenes/hitbox.tscn" id="3_h8gqs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c5ipy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6bp3c"]
atlas = ExtResource("2_jo7lv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf6pc"]
atlas = ExtResource("2_jo7lv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0dhv"]
atlas = ExtResource("2_jo7lv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgkth"]
atlas = ExtResource("2_jo7lv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmv2q"]
atlas = ExtResource("2_jo7lv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2g1os"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bp3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf6pc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0dhv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgkth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmv2q")
}],
"loop": false,
"name": &"timeout",
"speed": 5.0
}]

[node name="Dandelion" type="Area2D"]
top_level = true
position = Vector2(538, 324)
collision_layer = 0
collision_mask = 4
script = ExtResource("1_1f3j8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c5ipy")
debug_color = Color(3.80233e-06, 0.645691, 0.254461, 0.42)

[node name="Projectile" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_2g1os")
animation = &"timeout"

[node name="Hitbox" parent="." instance=ExtResource("3_h8gqs")]
collision_layer = 16
damage = 2

[node name="HitTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.292

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]

[editable path="Hitbox"]
